# cpm

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: commands.rs  main.rs  utils.rs
src/utils/: common.rs  github.rs  mod.rs  plugin.rs
