[package]
name = "cpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive", "cargo"] }
flate2 = "1.0.30"
pretty-duration = "0.1.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.120"
tabled = "0.15.0"
tar = "0.4.41"
url = "2.5.2"
